fixed the inner page spacing

--- a/css/main.css
+++ b/css/main.css
@@ -904,8 +904,8 @@ border: 1px solid rgba(255, 255, 255, 0.39) !important;
     margin-right: 30px;
     padding-bottom: 50px;
     position: relative;
-    top: -39px;
 min-height: 540px;
+margin-top: 0px;
 }
 li {
 }
@@ -1004,4 +1004,8 @@ a.fancybox {
     text-align: center;
     margin-bottom: 20px;
     color: #666;
+}
+
+.inner .page-content{
+	padding-top:1px;
 }
